# Gates

./: Cargo.toml
assets/: skeleton-custom.css
saves/: New Chip.gate  New Chip.gate.gate  New Chip.gate.gate.gate  New Gate.gate  New Gate.gate.gate  OR.gate  OR.gate.gate  OR.gate.gate.gate  live_data  primitives
src/: app.rs  main.rs  node.rs
src/app/: mod.rs  pan_area.rs  theme.rs  ui_util.rs
src/app/data/: mod.rs  theme.rs
src/node/: chip.rs  gate.rs  hi_signal.rs  log_button.rs  logical.rs  mod.rs  output.rs  primitive.rs  wire.rs
src/node/io/: input.rs  mod.rs  output.rs
