[package]
name = "Gates"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.32"
eframe = { version = "0.32", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
epaint = "0.32.0"
egui_dnd = "0.13.0"
serde_json = "1.0.141"
egui_canvas = "0.1.2"
